# GaraGara

./: .gitignore  CMakeLists.txt  README.md
src/: ball.c  ball.h  cutin_drawer.c  cutin_drawer.h  gara.c  gara.h  main.c  name_drawer.c  name_drawer.h  pd_uitl.h  pd_util.c
src/core/: CMakeLists.txt  lottery.c  math_util.c
src/core/include/: lottery.h  math_util.h
src/core/test/: CMakeLists.txt
src/core/test/src/: lottery_test.cpp  math_util_test.cpp
